--- a/plugins/org.jkiss.dbeaver.ui.editors.sql/OSGI-INF/l10n/bundle.properties
+++ b/plugins/org.jkiss.dbeaver.ui.editors.sql/OSGI-INF/l10n/bundle.properties
@@ -7,6 +7,7 @@ content-type.org.jkiss.dbeaver.sql.name = SQL Script
 
 menu.database.sql.generate = &Generate SQL
 menu.org.jkiss.dbeaver.core.connection.sqleditor = SQL Editor
+menu.sqleditor.open.default = Default command
 view.sql.results.title=Data
 
 editor.sql.name=SQL Editor
@@ -53,6 +54,8 @@ command.org.jkiss.dbeaver.core.sql.editor.create.name=New SQL script
 command.org.jkiss.dbeaver.core.sql.editor.create.description=Open new SQL script (creates new script)
 command.org.jkiss.dbeaver.core.sql.editor.console.name=Open SQL console
 command.org.jkiss.dbeaver.core.sql.editor.console.description=Open new SQL console. No script file will be created.
+command.org.jkiss.dbeaver.core.sql.editor.open.default.name=Default open command
+command.org.jkiss.dbeaver.core.sql.editor.open.default.description=Default SQL editor open command
 command.org.jkiss.dbeaver.core.sql.editor.forSelection.name=Read data in SQL editor
 command.org.jkiss.dbeaver.core.sql.editor.forSelection.description=Open new SQL console with data read query
 command.org.jkiss.dbeaver.core.procedure.execute.name=Execute Stored Procedure
