--- a/plugins/org.jkiss.dbeaver.ui.editors.sql/OSGI-INF/l10n/bundle.properties
+++ b/plugins/org.jkiss.dbeaver.ui.editors.sql/OSGI-INF/l10n/bundle.properties
@@ -110,6 +110,8 @@ command.org.jkiss.dbeaver.ui.editors.sql.save.file.name=Export SQL script
 command.org.jkiss.dbeaver.ui.editors.sql.save.file.description=Save script to file system.
 command.org.jkiss.dbeaver.ui.editors.sql.morph.delimited.list.name=Morph to delimited list
 command.org.jkiss.dbeaver.ui.editors.sql.morph.delimited.list.description=Morph to delimited list
+org.jkiss.dbeaver.ui.editors.sql.trim.spaces.name=Trim spaces
+org.jkiss.dbeaver.ui.editors.sql.trim.spaces.description=Trim trailing and leading spaces
 command.org.jkiss.dbeaver.ui.editors.sql.comment.single.name=Toggle Line Comment
 command.org.jkiss.dbeaver.ui.editors.sql.comment.single.description=Add or remove single line comment
 command.org.jkiss.dbeaver.ui.editors.sql.comment.multi.name=Toggle Block Comment
