--- a/plugins/org.jkiss.dbeaver.ui.search/src/org/jkiss/dbeaver/ui/search/internal/UISearchMessages_ru.properties
+++ b/plugins/org.jkiss.dbeaver.ui.search/src/org/jkiss/dbeaver/ui/search/internal/UISearchMessages_ru.properties
@@ -9,7 +9,7 @@ dialog_search_objects_combo_starts_with = \u041D\u0430\u0447\u0438\u043D\u0430\u
 dialog_search_objects_group_object_types = \u0422\u0438\u043F\u044B \u043E\u0431\u044A\u0435\u043A\u0442\u043E\u0432
 dialog_search_objects_group_objects_source = \u0418\u0441\u0442\u043E\u0447\u043D\u0438\u043A\u0438 \u043E\u0431\u044A\u0435\u043A\u0442\u043E\u0432
 dialog_search_objects_item_list_info = \u0412\u044B \u0434\u043E\u043B\u0436\u043D\u044B \u0443\u043A\u0430\u0437\u0430\u0442\u044C \u043F\u043E\u0438\u0441\u043A\u043E\u0432\u044B\u0439 \u0437\u0430\u043F\u0440\u043E\u0441
-dialog_search_objects_label_name_match = \u041F\u0440\u043E\u0432\u0435\u0440\u043A\u0430
+dialog_search_objects_label_match_type = \u0422\u0438\u043F \u043F\u0440\u043E\u0432\u0435\u0440\u043A\u0438
 dialog_search_objects_label_object_name = \u0418\u043C\u044F \u043E\u0431\u044A\u0435\u043A\u0442\u0430
 dialog_search_objects_message_no_objects_like_ = \u041D\u0435\u0442 \u043E\u0431\u044A\u0435\u043A\u0442\u043E\u0432 \u043F\u043E\u0434\u043E\u0431\u043D\u044B\u0445 "{0}" \u0432 "{1}"
 dialog_search_objects_message_objects_found = \ \u043E\u0431\u044A\u0435\u043A\u0442\u043E\u0432 \u043D\u0430\u0439\u0434\u0435\u043D\u043E
