--- a/plugins/org.jkiss.dbeaver.ui/src/org/jkiss/dbeaver/ui/internal/UIMessages_ru.properties
+++ b/plugins/org.jkiss.dbeaver.ui/src/org/jkiss/dbeaver/ui/internal/UIMessages_ru.properties
@@ -43,3 +43,8 @@ ui_properties_name=\u0418\u043C\u044F
 ui_properties_value=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
 
 control_label_connection_folder = \u041F\u0430\u043F\u043A\u0430 \u0441\u043E\u0435\u0434\u0438\u043D\u0435\u043D\u0438\u044F
+
+value_format_selector_database_native = \u0424\u043E\u0440\u043C\u0430\u0442 \u0441\u0435\u0440\u0432\u0435\u0440\u0430 \u0411\u0414
+value_format_selector_display = \u0421\u0442\u0430\u043D\u0434\u0430\u0440\u0442\u043D\u044B\u0439 (\u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E)
+value_format_selector_editable = \u041F\u0440\u043E\u0441\u0442\u043E\u0439
+value_format_selector_value = \u0424\u043E\u0440\u043C\u0430\u0442 \u0437\u043D\u0430\u0447\u0435\u043D\u0438\u044F
