#12294 Clarify navigator tree filter modes
Former-commit-id: 9b04292e27fe1fa55e9a4f993f66f073ee005ca2
Former-commit-id: 4f5fa944a05ffcfc05d956f7ac16aff67a24e96d [formerly 46e3e815498dc3b167213983f81d33e9172b67a3]
Former-commit-id: 74a1c143349f0899e785349f086a7c19b54639cb

--- a/plugins/org.jkiss.dbeaver.ui.navigator/src/org/jkiss/dbeaver/ui/internal/UINavigatorMessages_es.properties
+++ b/plugins/org.jkiss.dbeaver.ui.navigator/src/org/jkiss/dbeaver/ui/internal/UINavigatorMessages_es.properties
@@ -43,7 +43,7 @@ actions_navigator_filter_objects = Configurar el filtro "{0}"...
 
 actions_navigator_open = Abrir {0}
 
-actions_navigator_search_tip = Ingrese parte del nombre de una tabla aqu\u00ED
+actions_navigator_search_tip = Ingrese parte del nombre de un objeto aqu\u00ED
 
 actions_navigator_view = Ver {0}
 
