dbeaver/dbeaver-ee#587 ERD edit toolbar. Extra commands. Delete dialog improvements.
Former-commit-id: 80a2ede83785f36d334da9aaa502439fe39e78ee
Former-commit-id: cc7e7dad668b02c8c3fd4a3d0c492ba0234ce2ff [formerly d319196b54e9da85a77323e9e71618b6b8d3fe95]
Former-commit-id: 9a7fac352eae1d08513a6b5d25a30be468590a3d

--- a/plugins/org.jkiss.dbeaver.ui.navigator/src/org/jkiss/dbeaver/ui/internal/UINavigatorMessages_es.properties
+++ b/plugins/org.jkiss.dbeaver.ui.navigator/src/org/jkiss/dbeaver/ui/internal/UINavigatorMessages_es.properties
@@ -69,7 +69,7 @@ confirm_deleting_multiple_objects_column_description = Descripci\u00F3n
 
 confirm_deleting_multiple_objects_column_name = Nombre
 
-confirm_deleting_multiple_objects_message = \u00BFEst\u00E1 seguro de que quiere borrar {0} objetos?\n\u00A1Esta acci\u00F3n no se puede revertir!
+confirm_deleting_multiple_objects_message = \u00BFEst\u00E1 seguro de que quiere borrar {0} objetos?
 
 confirm_deleting_multiple_objects_table_group_name = Objetos
 
